<resources>
    <string name="app_name">MagnetSearch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email">keral.dev.cn@gmail.com</string>

    <string name="banner_ad_unit_id">ca-app-pub-6577204380833634/4833689907</string>

    <string name="key_theme">key_theme</string>
    <string name="key_intro">key_introduction</string>
    <string name="key_score">key_score</string>
    <string name="key_share_qr">key_share_qr</string>
    <string name="key_fast_open">key_fast_open</string>
    <string name="key_clean">key_clean</string>
    <string name="key_todo_list">key_todo_list</string>
    <string name="key_open_video">key_open_video</string>

    <string name="color_default">默认</string>
    <string name="color_blue">蓝色</string>
    <string name="color_red">红色</string>
    <string name="color_green">绿色</string>
    <string name="color_cyan">蓝绿色</string>
    <string name="color_purple">紫色</string>
    <string name="color_orange">橙色</string>
    <string name="color_pink">粉红色</string>
    <string name="color_teal">青色</string>

    <string-array name="pref_theme_titles">
        <item>@string/color_default</item>
        <item>@string/color_blue</item>
        <item>@string/color_red</item>
        <item>@string/color_green</item>
        <item>@string/color_cyan</item>
        <item>@string/color_purple</item>
        <item>@string/color_orange</item>
        <item>@string/color_pink</item>
        <item>@string/color_teal</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="pref_search_source_titles" >
        <item>torrent kitty</item>
        <item>Btso</item>
        <item>BtTit</item>
    </string-array>
    <string-array name="pref_search_source_values" >
        <item>org.zky.tool.magnetsearch.search.factory.TorrentKittySearchSource</item>
        <item>org.zky.tool.magnetsearch.search.factory.BtsoSearchSource</item>
        <item>org.zky.tool.magnetsearch.search.factory.BtTitSearchSource</item>
    </string-array>


    <string name="intro_string_1">输入你想找的电影、音乐、资源</string>
    <string name="intro_string_2">方便下次打开或分享</string>
    <string name="intro_string_3">生成二维码，分享更方便</string>

    <string name="todo_1">修改收藏夹、历史</string>
    <string name="todo_2">适配7.0文件权限</string>
    <string name="todo_3">增加搜索源,有啥建议email我(๑•̀ㅂ•́)و✧</string>

    <string name="dialog_title_get_video">尝试获取视频地址</string>
    <string name="dialog_message_1">（1/3）获取视频列表中...</string>
    <string name="dialog_message_2">(2/3)获取列表成功，解析地址...</string>
    <string name="dialog_message_3">(3/3)获取地址成功</string>

    <string name="pref_title_theme">主题颜色</string>
    <string name="pref_title_fast_open">快速打开磁力链接</string>
    <string name="pref_title_share_qr">分享时生成二维码</string>
    <string name="pref_title_score">评分鼓励(⬇点个广告?|・ω・`))</string>
    <string name="pref_title_clean_history">清除缓存</string>
    <string name="pref_title_todo">todo list</string>
    <string name="pref_title_open_video">长按播放视频</string>
    <string name="pref_summary_open_video">尝试播放视频(不稳定，需mxplayer)</string>
    <string name="pref_summary_close_video">该功能不稳定并消耗大量带宽，建议用其他app下载</string>

    <string name="activity_not_found_error">没有发现打开磁力链接的程序</string>
    <string name="add_to_clipboard">已复制到剪切板</string>
    <string name="communicate">交流</string>
    <string name="action_settings">设置</string>
    <string name="other">其他</string>
    <string name="send">反馈</string>
    <string name="share">分享</string>
    <string name="share_to">分享到</string>
    <string name="action_history">历史记录</string>
    <string name="action_favorites">收藏夹</string>
    <string name="email_subject">MagnetSearch反馈</string>
    <string name="no_email_app">没有发现发送邮件的程序</string>
    <string name="share_content" >https://play.google.com/store/apps/details?id=org.zky.tool.magnetsearch</string>
    <string name="i_know">知道了</string>
    <string name="skip">跳过</string>
    <string name="done">完成</string>
    <string name="keyword_empty">关键词不能为空</string>
    <string name="invalid_keyword">关键词包含无效字符</string>
    <string name="history_activity">历史记录</string>
    <string name="favorites_activity">收藏夹</string>
    <string name="opened">使用</string>
    <string name="all">所有</string>
    <string name="no_data">没有数据，换个关键词试试？</string>
    <string name="open">打开</string>
    <string name="loading_qr">生成二维码中</string>
    <string name="clean_success">清理完毕</string>
    <string name="search">搜索</string>
    <string name="favorite">收藏</string>
    <string name="searchHint">搜磁力链接</string>
    <string name="key_search_source">key_search_source</string>
    <string name="pref_title_search_source">搜索源</string>
    <string name="pref_summary_search_source">选择搜索源</string>


</resources>
