<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
      dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_theme_titles"
        android:entryValues="@array/pref_theme_values"
        android:key="@string/key_theme"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_theme" />


    <!-- A 'parent' preference, which enables/disables child preferences (below)
     when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/key_fast_open"
        android:title="@string/pref_title_fast_open" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/key_share_qr"
        android:title="@string/pref_title_share_qr" />
    <Preference
        android:key="@string/key_clean"
        android:title="@string/pref_title_clean_history"
        />
    <Preference
        android:key="@string/key_score"
        android:title="@string/pref_title_score"
        />



</PreferenceScreen>
