<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimary"
            android:layout_above="@+id/iv_qr_code"
            android:text="@string/loading_qr"
            />
        <ImageView
            android:id="@+id/iv_qr_code"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/ic_logo"
            android:layout_centerInParent="true"
            />
        <LinearLayout
            android:layout_below="@+id/iv_qr_code"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/open"
                />
            <Button
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/share"
                />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>